[package]
name = "spark"
version = "0.1.0"
description = "Feature rich implementation of spark.sh"
authors = ["GrbavaCigla <alexa.ognjanovic@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3.20", default-features = false }
